ADD dependencies and config for testing and logging